--- a/roles/security/templates/crowdsec/config.yaml.j2
+++ b/roles/security/templates/crowdsec/config.yaml.j2
@@ -1,3 +1,7 @@
+#
+# {{ ansible_managed }}
+#
+
 common:
   daemonize: true
   log_media: file
@@ -29,7 +33,7 @@ db_config:
   db_path: /var/lib/crowdsec/data/crowdsec.db
   use_wal: {{ crowdsec_use_wal }}
   #max_open_conns: 100
-  #user: 
+  #user:
   #password:
   #db_name:
   #host:
