--- a/extensions/molecule/common/Dockerfile.j2
+++ b/extensions/molecule/common/Dockerfile.j2
@@ -21,11 +21,11 @@ RUN \
     && apt-get clean; \
   elif [ $(command -v dnf) ]; then \
     dnf makecache \
-    && dnf --assumeyes install bash sudo /usr/bin/dnf-3 /usr/bin/python3 /usr/bin/python3-config iproute \
+    && dnf --assumeyes install bash sudo /usr/bin/dnf-3 /usr/bin/python3 /usr/bin/python3-config iproute procps \
     && dnf clean all; \
   elif [ $(command -v yum) ]; then \
     yum makecache fast \
-    && yum install -y bash sudo /usr/bin/python /usr/bin/python2-config iproute \
+    && yum install -y bash sudo /usr/bin/python /usr/bin/python2-config iproute procps \
     && yum install -y http://mirror.centos.org/centos/7/os/x86_64/Packages/yum-plugin-copr-1.1.31-54.el7_8.noarch.rpm http://mirror.centos.org/centos/7/os/x86_64/Packages/libseccomp-2.3.1-4.el7.x86_64.rpm \
     && yum copr enable -y jsynacek/systemd-backports-for-centos-7 \
     && yum update --disableplugin=priorities -y systemd \
