--- a/extensions/molecule/common/Dockerfile-systemd.j2
+++ b/extensions/molecule/common/Dockerfile-systemd.j2
@@ -14,32 +14,45 @@ ENV {{ var }} {{ value }}
 {% endfor %}
 {% endif %}
 
+ENV container=docker \
+    DEBIAN_FRONTEND=noninteractive
+
 RUN \
   if [ $(command -v apt-get) ]; then \
     apt-get update \
-    && DEBIAN_FRONTEND=noninteractive apt-get install -y aptitude bash curl dirmngr iproute2 python3 python3-apt procps sudo systemd systemd-sysv vim \
-    && apt-get clean; \
+    && apt-get install -y --no-install-recommends aptitude bash curl dirmngr iproute2 python3 python3-apt procps sudo systemd systemd-sysv findutils \
+    && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*; \
   elif [ $(command -v dnf) ]; then \
     dnf makecache \
-    && dnf --assumeyes install bash iproute sudo /usr/bin/dnf-3 /usr/bin/python3 /usr/bin/python3-config vim openssl \
+    && dnf --assumeyes install bash glibc-common initscripts iproute sudo /usr/bin/dnf-3 /usr/bin/python3 /usr/bin/python3-config openssl findutils \
     && dnf clean all; \
   elif [ $(command -v yum) ]; then \
     yum makecache fast \
-    && yum install -y bash iproute initscripts sudo /usr/bin/python /usr/bin/python2-config vim yum-plugin-ovl openssl \
+    && yum install -y bash iproute initscripts sudo /usr/bin/python /usr/bin/python2-config yum-plugin-ovl openssl \
     && yum copr enable -y jsynacek/systemd-backports-for-centos-7 \
     && yum update --disableplugin=priorities -y systemd \
     && sed -i 's/plugins=0/plugins=1/g' /etc/yum.conf \
     && yum clean all; \
   elif [ $(command -v zypper) ]; then \
     zypper refresh \
-    && zypper install -y bash iproute2 python3 sudo systemd systemd-sysvinit vim \
+    && zypper install -y bash iproute2 python3 sudo systemd systemd-sysvinit \
     && zypper clean -a; \
   elif [ $(command -v apk) ]; then \
     apk update \
-    && apk add --no-cache bash curl openrc python3 sudo vim; \
+    && apk add --no-cache bash curl openrc python3 sudo; \
     echo 'rc_provide="loopback net"' >> /etc/rc.conf; \
   elif [ $(command -v xbps-install) ]; then \
     xbps-install -Syu \
-    && xbps-install -y bash iproute2 python3 sudo vim \
+    && xbps-install -y bash iproute2 python3 sudo \
     && xbps-remove -O; \
   fi
+
+  RUN find /etc/systemd/system \
+  /lib/systemd/system \
+  -path '*.wants/*' \
+  -not -name '*journald*' \
+  -not -name '*systemd-tmpfiles*' \
+  -not -name '*systemd-user-sessions*' \
+  -print0 | xargs -0 rm -vf
+
+VOLUME [ "/sys/fs/cgroup" ]
