--- a/roles/bash_profile/templates/on-login-message.sh.j2
+++ b/roles/bash_profile/templates/on-login-message.sh.j2
@@ -17,7 +17,7 @@ LOAD15=`cat /proc/loadavg | awk {'print $3'}`
 echo "
 ===============================================
  - Hostname............: $HOSTNAME
- - Disk Space..........: $ROOT remaining
+ - ROOT Space..........: $ROOT remaining
 ===============================================
  - CPU usage...........: $LOAD1, $LOAD5, $LOAD15 (1, 5, 15 min)
  - Memory used.........: $MEMORY1 / $MEMORY2
