refactor: add prefix for variables

--- a/roles/bash_profile/templates/on-login-message.sh.j2
+++ b/roles/bash_profile/templates/on-login-message.sh.j2
@@ -27,5 +27,5 @@ echo "
 
 echo -e "
 \033[41m\033[5mWARRNING\033[m
-\033[1;34m{{ on_login_message }}\033[m
+\033[1;34m{{ bash_on_login_message }}\033[m
 "
