feature: add secure log

--- a/roles/security/templates/crowdsec/docker-compose.yml.j2
+++ b/roles/security/templates/crowdsec/docker-compose.yml.j2
@@ -9,6 +9,7 @@ services:
       PARSERS: "crowdsecurity/whitelists"
     volumes:
       - /var/log/auth.log:/logs/auth.log:ro
+      - /var/log/secure:/logs/secure:ro
       - crowdsec-db:/var/lib/crowdsec/data/
       - crowdsec-config:/etc/crowdsec/
     ports:
