fix: fix crowdsec configuration

--- a/roles/security/templates/crowdsec/docker-compose.yml.j2
+++ b/roles/security/templates/crowdsec/docker-compose.yml.j2
@@ -12,6 +12,8 @@ services:
       - /var/log/secure:/logs/secure:ro
       - crowdsec-db:/var/lib/crowdsec/data/
       - crowdsec-config:/etc/crowdsec/
+      - /etc/crowdsec/acquis.d/:/etc/crowdsec/acquis.d/
+      - /etc/crowdsec/parsers/:/etc/crowdsec/parsers/
     ports:
       - '127.0.0.1:8080:8080'
     networks:
