fix: bouncer registration

--- a/roles/security/templates/crowdsec/docker-compose.yml.j2
+++ b/roles/security/templates/crowdsec/docker-compose.yml.j2
@@ -6,10 +6,11 @@ services:
     restart: always
     environment:
       COLLECTIONS: "crowdsecurity/sshd"
-      PARSERS: "crowdsecurity/whitelists"
+      # PARSERS: "crowdsecurity/whitelists"
     volumes:
       - /var/log/auth.log:/logs/auth.log:ro
       - /var/log/secure:/logs/secure:ro
+      - /var/log/audit/audit.log:/logs/audit.log:ro
       - crowdsec-db:/var/lib/crowdsec/data/
       - crowdsec-config:/etc/crowdsec/
       - /etc/crowdsec/acquis.d/:/etc/crowdsec/acquis.d/
